# Final-Embebidos-

./: README.md
Copia de Nodo3_Concentrador 2/: CMakeLists.txt
Copia de Nodo3_Concentrador 2/main/: main.c
Copia de Nodo3_Concentrador/components/: alerts.c  alerts.h  http_client.c  http_client.h  oled.c  oled.h  wifi_espnow.c
Copia de Nodo3_Concentrador/main/: CMakeLists.txt  idf_component.yml  main.c  shared_types.h  tasks.h
Nodo2_GPS/: CMakeLists.txt
Nodo2_GPS/main/: main.c
Nodo3_Concentrador/components/: http_client.c  http_client.h  leds.c  leds.h  wifi_espnow.c  wifi_espnow.h
Nodo3_Concentrador/main/: shared_types.h  tasks.c
backend_flask/: .env  app.py
backend_flask/database/: db.py
backend_flask/processing/: alerts.py
backend_flask/routes/: data_routes.py
backend_flask/static/: style.css
backend_flask/templates/: dashboard.html
nodo1/: CMakeLists.txt  diaplatPRIMARIOC.txt  displaySECUNDARIO-PRIMARIO.txt  displaySECUNDARIOc.txt  espnowc.txt  main.txt  partitions.csv
nodo1/main/: CMakeLists.txt  display.c  display.h  espnow_send.c  espnow_send.h  main.c  pulse_sensor.c  pulse_sensor.h  qmi8658.c  qmi8658.h  touch.c  touch.h
nodo2.1/: CMakeLists.txt
nodo2.1/main/: CMakeLists.txt  espnow.c  espnow.h  gps.c  gps.h  main.c  mpu6050.c  mpu6050.h  oled.c  oled.h  shared_data.c  shared_data.h
