idf_component_register(
    SRCS
        "main.c"
        "tasks.c"
        "../components/alerts.c"
        "../components/http_client.c"
        "../components/leds.c"
        "../components/oled.c"
        "../components/wifi_espnow.c"
    INCLUDE_DIRS
        "."
        "../components"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        driver
        esp_timer
        espressif__ssd1306
        espressif__cjson
        esp_driver_gpio
)